--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,20 @@
+# MySQL connection properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/vehicles
-spring.datasource.username=test
-spring.datasource.password=test
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.username=root
+spring.datasource.password=anlespma1
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?createDatabaseIfNotExist=true&useSSL=false
+# Hibernate SQL dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+# Log JPA queries
+# Comment this in production
+spring.jpa.show-sql=true
+
+# Drop and create new tables (create, create-drop, validate, update)
+# Only for testing purpose - comment this in production
+spring.jpa.hibernate.ddl-auto=update
+
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=500KB
+
+
+
