--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 
 # Drop and create new tables (create, create-drop, validate, update)
 # Only for testing purpose - comment this in production
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
